--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   },
   "dependencies": {
     "gatsby": "^3.4.1",
+    "gatsby-plugin-styled-components": "^4.7.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "prettier": "2.2.1"
