--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
   },
   "dependencies": {
     "gatsby": "^3.4.1",
+    "gatsby-image": "^3.7.1",
+    "gatsby-plugin-image": "^1.7.1",
+    "gatsby-plugin-react-helmet": "^4.7.1",
+    "gatsby-plugin-sharp": "^3.7.1",
     "gatsby-plugin-styled-components": "^4.7.1",
+    "gatsby-source-filesystem": "^3.7.1",
+    "gatsby-transformer-sharp": "^3.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
